# winxplorer

./: .qmlls.ini  CMakeLists.txt  LICENSE  Main.qml  NavigationBar.qml  README.md  aero.qrc  contextmenu.cpp  contextmenu.h  favoritesmodel.cpp  favoritesmodel.h  filesbackend.cpp  filesbackend.h  filesmodel.cpp  filesmodel.h  install.sh  main.cpp
controls/: .qmlls.ini  CMakeLists.txt  CommandBar.qml  CommandButton.qml  FileColumns.qml
panes/: .qmlls.ini  CMakeLists.txt  Details.qml  Files.qml  Navigation.qml
